adding new files, new changes on style.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="icon.png">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.max.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -681,6 +681,11 @@
                             <div class="download-item">
                                 <a href="files/Telephonie/Telephonie-Chap-1-RTC.pdf" class="dwn-left">Téléphonie - Chapitre 1: Téléphonie Analogique à Commutation <br> PDF <br> 1093 Kb</a>
                                 <a href="files/Telephonie/Telephonie-Chap-1-RTC.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/Telephonie/Telephonie-Chap-2-Supports-de-transmission-en-telephonie.pdf" class="dwn-left">Téléphonie - Chapitre 1: Supports de transmission en telephonie <br> PDF <br> 778 Kb</a>
+                                <a href="files/Telephonie/Telephonie-Chap-2-Supports-de-transmission-en-telephonie.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
