Adding new files - Telephonie

--- a/index.html
+++ b/index.html
@@ -205,6 +205,20 @@
                             </div>
 
                             <div class="download-item">
+                                <a href="files/TS/TS-Cours-Chapitre-1.pdf" class="dwn-left">TS Cours Chapitre 1 <br> PDF <br> 198 Kb</a>
+                                <a href="files/TS/TS-Cours-Chapitre-1.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/TS/TS-Cours-Chapitres-2-et-3.pdf" class="dwn-left">TS Cours Les Chapires 2 et 3 <br> PDF <br> 167 Kb</a>
+                                <a href="files/TS/TS-Cours-Chapitres-2-et-3.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+                            
+                            <div class="title" role="textbox">
+                                <h3>Les TD:</h3>
+                            </div>
+
+                            <div class="download-item">
                                 <a href="files/TS/TS-TD-1.docx" class="dwn-left">TS TD N: 1 <br> Fichier Word <br> 19 Kb</a>
                                 <a href="files/TS/TS-TD-1.docx" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
