Change some metadata !

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head prefix="og: https://ogp.me/ns#">
-    <link rel="canonical" href="https://l3.ustotc.com">
+    <link rel="canonical" href="https://private.ustotc.com">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=.8">
-    <meta name="description" content="Bienvenue sur le site ustotc.com, vous trouverez ici touts les cours et les TD/TP du département des télécommunications de l'université des sciences et de la technologie d'Oran Mohammed Boudiaf.">
-    <meta name="keywords" content="Télécommunications, tc, Telecommunication, Telecom, Electronique, Génie Biomédicale, Génie Electrique, usto, Oran ,Cours, Td, Tp, correction, site, L2 telecom, L3 telecom, S3, S4, S5, s6, Telecom usto, universite des sciences et de la technologie d'oran, mohammes boudiaf, USTO-MB, USTO Oran">
+    <meta name="description" content="Bienvenue, Vous trouverez ici toutes les cours et les TD/TP du département des télécommunications de l'université des sciences et de la technologie d'Oran Mohammed Boudiaf.">
+    <meta name="keywords" content="Usto, Télécommunications, tc, Telecommunication, Telecom, Electronique, Génie Biomédicale, Génie Electrique, usto, Oran ,Cours, Td, Tp, correction, site, L2 telecom, L3 telecom, S3, S4, S5, s6, Telecom usto, universite des sciences et de la technologie d'oran, Mohammed Boudiaf, USTO-MB, USTO Oran, Usto telecom, Usto telecommunications">
     <meta name="author" content="Merah Mkr">
     <meta property="og:title" content="S5 L3 USTO-MB Telecommunications">
     <meta property="og:description"  content="Bienvenue sur ustotc.com, vous trouverez ici touts les cours et les TD/TP du département des télécommunications de l'université des sciences et de la technologie d'Oran Mohammed Boudiaf.">
