--- a/index.html
+++ b/index.html
@@ -750,8 +750,14 @@
                        <div class="panel-contents">
 
                             <div class="title" role="textbox">
-                                <h3>Non Disponible!</h3>
+                                <h3>Les Cours:</h3>
                             </div>
+
+                            <div class="download-item">
+                                <a href="files/SDT/Supports-de-Transmission-chapitres-1-2-3.pdf" class="dwn-left">Supports de transmission - Les Chapitres 1,2 et 3 <br> PDF <br> 856 Kb</a>
+                                <a href="files/SDT/Supports-de-Transmission-chapitres-1-2-3.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
 
                        </div>
 
