Some changes in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
 
                        <div class="panel-contents">
 
-                            <a href="#" class="moodle-redirect">Voir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
@@ -195,7 +194,9 @@
                                    Coeff: 2 <br>
                                    Credit: 4
                                </p>
-
+                                <div class="moodle-disponibility">
+                                   ! Disponible sur moodle
+                               </div>
                             </div>
                         </div>
 
@@ -207,7 +208,7 @@
 
                        <div class="panel-contents">
 
-                            <a href="#" class="moodle-redirect">Ouvrir sur moodle</a>
+                            <a href="https://elearning.univ-usto.dz/course/view.php?id=2069" class="moodle-redirect">Ouvrir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
@@ -280,7 +281,7 @@
 
                        <div class="panel-contents">
 
-                            <a href="#" class="moodle-redirect">Ouvrir sur moodle</a>
+                            <a href="https://elearning.univ-usto.dz/course/view.php?id=1571" class="moodle-redirect">Ouvrir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
@@ -386,8 +387,6 @@
 
                        <div class="panel-contents">
 
-                            <a href="#" class="moodle-redirect">Ouvrir sur moodle</a>
-
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
                             </div>
@@ -460,7 +459,7 @@
 
                        <div class="panel-contents">
 
-                            <a href="#" class="moodle-redirect">Ouvrir sur moodle</a>
+                            <a href="https://elearning.univ-usto.dz/course/view.php?id=1459" class="moodle-redirect">Ouvrir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
@@ -685,6 +684,9 @@
                                    Coeff: 1 <br>
                                    Credit: 1
                                </p>
+                               <div class="moodle-disponibility">
+                                   ! Disponible sur moodle
+                               </div>
 
                             </div>
                         </div>
@@ -696,6 +698,7 @@
                     <div class="panel">
 
                        <div class="panel-contents">
+                            <a href="https://elearning.univ-usto.dz/course/view.php?id=2103" class="moodle-redirect">Ouvrir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
@@ -735,8 +738,8 @@
                                    Coeff: 1 <br>
                                    Credit: 1
                                </p>
-                               <div class="none-disponibility">
-                                   Non Disponible
+                               <div class="moodle-disponibility">
+                                   Disponible sur moodle
                                </div>
                             </div>
                         </div>
@@ -748,6 +751,7 @@
                     <div class="panel">
 
                        <div class="panel-contents">
+                            <a href="https://elearning.univ-usto.dz/course/view.php?id=2099" class="moodle-redirect">Ouvrir sur moodle</a>
 
                             <div class="title" role="textbox">
                                 <h3>Les Cours:</h3>
