fix errors on index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head prefix="og: https://ogp.me/ns#">
     <link rel="canonical" href="https://private.ustotc.com">
-    <link rel="amphtml" href="https://www.ustotc.com/amp/index.amp.html">
+    <link rel="amphtml" href="https://private.ustotc.com/amp/index.amp.html">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=.8">
