Adding course, fix bugs on amp

--- a/index.html
+++ b/index.html
@@ -171,6 +171,30 @@
                                 <a href="files/CA/Chapitre-4-Comunication-Analogique.docx" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
                             </div>
 
+                            <div class="download-item">
+                                <a href="files/CA/Chapitre-5-Comunication-Analogique.docx" class="dwn-left" target="_blank">
+                                    Ca Cours: Chapitre 5 <br> Fichier Word 4370 KB
+                                </a>
+
+                                <a href="files/CA/Chapitre-5-Comunication-Analogique.docx" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/CA/Chapitre-6-Comunication-Analogique.docx" class="dwn-left" target="_blank">
+                                    Ca Cours: Chapitre 6 <br> Fichier Word 1472 KB
+                                </a>
+
+                                <a href="files/CA/Chapitre-6-Comunication-Analogique.docx" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/CA/Chapitre-7-Comunication-Analogique.docx" class="dwn-left" target="_blank">
+                                    Ca Cours: Chapitre 7 <br> Fichier Word 3586 KB
+                                </a>
+
+                                <a href="files/CA/Chapitre-7-Comunication-Analogique.docx" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
+                            </div>
+
                        </div>
 
                     </div>
@@ -555,9 +579,7 @@
                                    Coeff: 1 <br>
                                    Credit: 2
                                </p>
-                               <div class="none-disponibility">
-                                   Non Disponible
-                               </div>
+
                             </div>
                         </div>
 
@@ -570,7 +592,12 @@
                        <div class="panel-contents">
 
                             <div class="title" role="textbox">
-                                <h3>Non Disponible !</h3>
+                                <h3>Les tp</h3>
+                            </div>
+                            
+                            <div class="download-item">
+                                <a href="files/TP-OP/usto-l3-tp-op-1.pdf" class="dwn-left">Fiche TP 1 <br> PDF <br> 1692 Kb</a>
+                                <a href="files/TP-OP/usto-l3-tp-op-1.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
