--- a/index.html
+++ b/index.html
@@ -815,9 +815,6 @@
                                    Coeff: 1 <br>
                                    Credit: 1
                                </p>
-                               <div class="none-disponibility">
-                                   Non Disponible
-                               </div>
                             </div>
                         </div>
 
@@ -830,7 +827,13 @@
                        <div class="panel-contents">
 
                             <div class="title" role="textbox">
-                                <h3>Non Disponible !</h3>
+                                <h3>Les Cours</h3>
+                            </div>
+
+                            
+                            <div class="download-item">
+                                <a href="files/CMT/CMT-Chap-1-Definitions-Et-Caracteristiques-Des-Capteurs.pdf" class="dwn-left">CMT - Chapitre 1 Definitions et caracteristiques des Capteurs <br> PDF <br> 1062 Kb</a>
+                                <a href="files/CMT/CMT-Chap-1-Definitions-Et-Caracteristiques-Des-Capteurs.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
