Add new file (Ca cours photos part 2)

--- a/index.html
+++ b/index.html
@@ -133,11 +133,20 @@
 
                             <div class="download-item">
                                 <a href="files/CA/CA-Cours-Photos.zip" class="dwn-left" target="_blank">
-                                    Ca Cours: Tous les chapitres en photos <br> Fichier Zip <br> 4781 KB
+                                    Ca Cours: Les chapires [1,2,3 et 4] en photos <br> Fichier Zip <br> 4781 KB
                                 </a>
 
                                 <a href="files/CA/CA-Cours-Photos.zip" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
                             </div>
+
+                            <div class="download-item">
+                                <a href="files/CA/CA-Cours-Photos-Partie-2.zip" class="dwn-left" target="_blank">
+                                    Ca Cours: Les chapires [5,6 et 7] en photos <br> Fichier Zip <br> 4284 KB
+                                </a>
+
+                                <a href="files/CA/CA-Cours-Photos-Partie-2.zip" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
+                            </div>
+
 
                             <div class="download-item">
                                 <a href="files/CA/chapitre-1-Comunication-Analogic.docx" class="dwn-left" target="_blank">
