Add new files in "Telephonie + OP"

--- a/index.html
+++ b/index.html
@@ -350,6 +350,21 @@
                                 <a href="files/OP/5-OP5-L'Atmosph%C3%A8re.PDF" class="dwn-left">OP - Cours - Chapitre 3 - L'Atmosphére  <br> PDF <br> 88 Kb</a>
                                 <a href="files/OP/5-OP5-L'Atmosph%C3%A8re.PDF" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
+                            
+                            <div class="download-item">
+                                <a href="files/OP/6-OP-l'ionosphére.pdf" class="dwn-left">OP - Cours - Chapitre 4 - L'Ionosphére  <br> PDF <br> 85 Kb</a>
+                                <a href="files/OP/6-OP-l'ionosphére.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/OP/7-OP-l'ionosphére-suite.pdf" class="dwn-left">OP - Cours - Chapitre 4 - L'Ionosphére Suite  <br> PDF <br> 60 Kb</a>
+                                <a href="files/OP/7-OP-l'ionosphére-suite.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/OP/8-OP-Courbes-Atténuation.pdf" class="dwn-left">OP - Cours - Chapitre 4 - Courbures Atténuation de l'atmosphére + l'ionosphére  <br> PDF <br> 77 Kb</a>
+                                <a href="files/OP/8-OP-Courbes-Atténuation.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
 
                             <div class="download-item">
                                 <a href="files/OP/OP-formulesMath1.pdf" class="dwn-left">OP - Formules Mathematiques Importantes 1  <br> PDF <br> 88 Kb</a>
@@ -749,6 +764,11 @@
                             <div class="download-item">
                                 <a href="files/Telephonie/Telephonie-Chap-2-Supports-de-transmission-en-telephonie.pdf" class="dwn-left">Téléphonie - Chapitre 1: Supports de transmission en telephonie <br> PDF <br> 778 Kb</a>
                                 <a href="files/Telephonie/Telephonie-Chap-2-Supports-de-transmission-en-telephonie.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+                            
+                            <div class="download-item">
+                                <a href="files/Telephonie/Telephonie-Chap-3-La-téléphonie-num-cellulaire-GSM.pdf" class="dwn-left">Téléphonie - Chapitre 3: La Téléphonie Numérique Cellulaire GSM <br> PDF <br> 1051 Kb</a>
+                                <a href="files/Telephonie/Telephonie-Chap-3-La-téléphonie-num-cellulaire-GSM.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
