--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
                             </div>
 
                             <div class="download-item">
-                                <a href="files/TS/TS-Cours-Chapitre-1.pdf" class="dwn-left">TS Cours Chapitre 1 <br> PDF <br> 198 Kb</a>
+                                <a href="files/TS/TS-Cours-Chapitre-1.pdf" class="dwn-left">Traitement su Signal Cours Chapitre 1 <br> PDF <br> 198 Kb</a>
                                 <a href="files/TS/TS-Cours-Chapitre-1.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                             <div class="download-item">
-                                <a href="files/TS/TS-Cours-Chapitres-2-et-3.pdf" class="dwn-left">TS Cours Les Chapires 2 et 3 <br> PDF <br> 167 Kb</a>
+                                <a href="files/TS/TS-Cours-Chapitres-2-et-3.pdf" class="dwn-left">Traitement su Signal Cours Les Chapires 2 et 3 <br> PDF <br> 167 Kb</a>
                                 <a href="files/TS/TS-Cours-Chapitres-2-et-3.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
                             
@@ -275,6 +275,11 @@
                             <div class="download-item">
                                 <a href="files/TS/TS-TD-3.docx" class="dwn-left">TS TD N: 3 <br> Fichier Word <br> 35 Kb</a>
                                 <a href="files/TS/TS-TD-3.docx" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/TS/TS-TD-4.pdf" class="dwn-left">TS TD N: 4 <br> PDF <br> 140 Kb</a>
+                                <a href="files/TS/TS-TD-4.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
