Add new files in TP TS

--- a/index.html
+++ b/index.html
@@ -658,9 +658,7 @@
                                    Coeff: 1 <br>
                                    Credit: 2
                                </p>
-                               <div class="none-disponibility">
-                                   Non Disponible
-                               </div>
+
                             </div>
                         </div>
 
@@ -673,8 +671,14 @@
                        <div class="panel-contents">
 
                             <div class="title" role="textbox">
-                                <h3>Non Disponible !</h3>
+                                <h3>Les tp:</h3>
                             </div>
+                                                        
+                            <div class="download-item">
+                                <a href="files/TP-TS/TP-TS-Fiche-2.pdf" class="dwn-left">Fiche TP 2 <br> PDF <br> 513 Kb</a>
+                                <a href="files/TP-TS/TP-TS-Fiche-2.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
 
                        </div>
 
