--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 
 
                             <div class="download-item">
+                                <a href="files/CA/Cours-Demonstrations-Communication-Analogique.pdf" class="dwn-left" target="_blank">
+                                    Ca Cours: Les demonstrations du cours.. <br> PDF <br> 11.9 MB
+                                </a>
+
+                                <a href="files/CA/Cours-Demonstrations-Communication-Analogique.pdf" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
+                            </div>
+                            
+                            <div class="download-item">
                                 <a href="files/CA/CA-Cours-Photos.zip" class="dwn-left" target="_blank">
                                     Ca Cours: Les chapires [1,2,3 et 4] en photos <br> Fichier Zip <br> 4781 KB
                                 </a>
@@ -483,6 +491,11 @@
                             <div class="download-item">
                                 <a href="files/SRT/6-SRT-Modems-et-Interfaces.ppt" class="dwn-left">Modems et Interfaces <br> Présentation PowerPoint 'ppt' <br> 1427 Kb</a>
                                 <a href="files/SRT/6-SRT-Modems-et-Interfaces.ppt" class="dwn-right"><i class="fa fa-download"></i></a>
+                            </div>
+
+                            <div class="download-item">
+                                <a href="files/SRT/7-Protection-Contre-Erreurs.pdf" class="dwn-left">Protection Contre Les Erreurs <br> PDF <br> 107 Kb</a>
+                                <a href="files/SRT/7-Protection-Contre-Erreurs.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
                        </div>
