--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                             <div class="download-item">
                                 <a href="files/CA/Cours-Demonstrations-Communication-Analogique.pdf" class="dwn-left" target="_blank">
-                                    Ca Cours: Les demonstrations du cours.. <br> PDF <br> 11.9 MB
+                                   <div class="new-dwn-item">NEW !</div> Ca Cours: Les demonstrations du cours.. <br> PDF <br> 11.9 MB
                                 </a>
 
                                 <a href="files/CA/Cours-Demonstrations-Communication-Analogique.pdf" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
@@ -141,7 +141,7 @@
                             
                             <div class="download-item">
                                 <a href="files/CA/CA-Cours-Photos.zip" class="dwn-left" target="_blank">
-                                    Ca Cours: Les chapires [1,2,3 et 4] en photos <br> Fichier Zip <br> 4781 KB
+                                  <div class="new-dwn-item">NEW !</div>  Ca Cours: Les chapires [1,2,3 et 4] en photos <br> Fichier Zip <br> 4781 KB
                                 </a>
 
                                 <a href="files/CA/CA-Cours-Photos.zip" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
@@ -149,7 +149,7 @@
 
                             <div class="download-item">
                                 <a href="files/CA/CA-Cours-Photos-Partie-2.zip" class="dwn-left" target="_blank">
-                                    Ca Cours: Les chapires [5,6 et 7] en photos <br> Fichier Zip <br> 4284 KB
+                                  <div class="new-dwn-item">NEW !</div>  Ca Cours: Les chapires [5,6 et 7] en photos <br> Fichier Zip <br> 4284 KB
                                 </a>
 
                                 <a href="files/CA/CA-Cours-Photos-Partie-2.zip" class="dwn-right" download target="_blank"><i class="fa fa-download"></i></a>
@@ -494,7 +494,7 @@
                             </div>
 
                             <div class="download-item">
-                                <a href="files/SRT/7-Protection-Contre-Erreurs.pdf" class="dwn-left">Protection Contre Les Erreurs <br> PDF <br> 107 Kb</a>
+                                <a href="files/SRT/7-Protection-Contre-Erreurs.pdf" class="dwn-left"><div class="new-dwn-item">NEW !</div> Protection Contre Les Erreurs <br> PDF <br> 107 Kb</a>
                                 <a href="files/SRT/7-Protection-Contre-Erreurs.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
@@ -597,7 +597,7 @@
                             </div>
                             
                             <div class="download-item">
-                                <a href="files/TP-CI/TP-4-CI-Mr-Ouslim.pdf" class="dwn-left">Fiche TP 4 Par Mr: Ouslim <br> PDF <br> 365 Kb</a>
+                                <a href="files/TP-CI/TP-4-CI-Mr-Ouslim.pdf" class="dwn-left"><div class="new-dwn-item">NEW !</div>Fiche TP 4 Par Mr: Ouslim <br> PDF <br> 365 Kb</a>
                                 <a href="files/TP-CI/TP-4-CI-Mr-Ouslim.pdf" class="dwn-right"><i class="fa fa-download"></i></a>
                             </div>
 
