--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,6 @@
     
     </script>
     
-    <script type="text/javascript">var subscribersSiteId='64527a6b-088a-4004-9f7d-66068c5b6ef3';</script>
-    <script type="text/javascript" src="https://cdn.subscribers.com/assets/subscribers.js"></script>
+    <script type="text/javascript">var subscribersSiteId='64527a6b-088a-4004-9f7d-66068c5b6ef3';</script><script type="text/javascript" src="https://cdn.subscribers.com/assets/subscribers.js"></script>
 </body>
 </html>
